added showBrandQuant funct

--- a/cart/index.html
+++ b/cart/index.html
@@ -45,6 +45,10 @@
 
         <div class="cart__info">
           <!-- render cart info -->
+          <p class="" id="total-cart"></p>
+          <p class="" id="total-brands"></p>
+
+
           
         </div>
       </section>
